tests/ui/rfcs/rfc-2632-const-trait-impl/const-default-method-bodies.stderr
error[E0277]: the trait bound `NonConstImpl: ~const ConstDefaultFn` is not satisfied
  --> $DIR/const-default-method-bodies.rs:24:18
   |
LL |     NonConstImpl.a();
   |                  ^ the trait `ConstDefaultFn` is not implemented for `NonConstImpl`
   |
   = help: the trait `ConstDefaultFn` is implemented for `NonConstImpl`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
